[package]
name = "drone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.2"
rapier2d = "0.17.2"

[profile.release]
codegen-units = 1

[profile.release.package.rapier2d]
opt-level = 3